refactor: 카드 셔플 generate 리턴값을 불변으로 변경
Co-authored-by:CheChe903<cheche903@naver.com>