@@ -1,10 +1,10 @@
 package domain.deck;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 public class DeckGenerator {
 
@@ -12,10 +12,12 @@ public class DeckGenerator {
         return Arrays.stream(Shape.values())
                 .flatMap(shape -> Arrays.stream(Rank.values())
                         .map(rank -> new Card(rank, shape)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void shuffle(final List<Card> cards, final Random random) {
-        Collections.shuffle(cards, random);
+    public List<Card> shuffle(final List<Card> cards, final Random random) {
+        final List<Card> cardGroup = new ArrayList<>(cards);
+        Collections.shuffle(cardGroup, random);
+        return cardGroup;
     }
 }
